--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@ __pycache__/
 # C extensions
 *.so
 
+# SWP
+*.swp
+
+# Mac 
+*.DS_Store
+
+# VSCode
+*.vscode
+
 # Distribution / packaging
 .Python
 build/
