--- a/alejandro/Makefile
+++ b/alejandro/Makefile
@@ -1,7 +1,26 @@
+# Makefile for compiling and running the client-server application
 
+# Variables
+PYTHON = python3
 
-all:
-	@echo "Compilación y ejecución de la práctica"
+# Targets
+all: cliserv3
 
+# Compile the client-server application
+cliserv3: cli3 serv3 cliserv3.py
+	# No compilation needed for cliserv3.py
+
+# Run the client-server application
+run: cliserv3
+	$(PYTHON) cliserv3.py
+
+# Rules for compiling Python scripts
+cli3:
+	# No compilation needed for cli3.py
+
+serv3:
+	# No compilation needed for serv3.py
+
+# Clean up compiled files
 clean:
-	@echo "Limpiando..."
+	# No compiled files to clean
