--- a/dulibeth/p7/Makefile
+++ b/dulibeth/p7/Makefile
@@ -1,13 +1,13 @@
-file = $@ 
+login = $@
 
-cliente:
-	@python3 cli7.py 
-servidor: 
-	@python3 serv7.py
+cli:
+	@python3 cli7.py $(login)
+
+serv: 
+	@python3 serv7.py 
 %:
 	@echo "La regla '$@' no está definida en el Makefile."
 	@false
+
 clean:
 	@echo "Limpiando..."
-	rm cliserv2.py.swp
-	
