--- a/xavi/p7/Makefile
+++ b/xavi/p7/Makefile
@@ -2,10 +2,14 @@ login = $@
 signup = $@
 
 cli:
-	@python3 cli7.py $(login) $(signup)
+	@cd /app && @python3 cli7.py $(login) $(signup)
 
 serv: 
-	@python3 serv7.py 
+	@cd /app && @python3 serv7.py 
+
+test:
+	@cd /test && python3 -m unittest discover -v
+
 %:
 	@echo "La regla '$@' no está definida en el Makefile."
 	@false
