--- a/xavi/p7/Makefile
+++ b/xavi/p7/Makefile
@@ -2,13 +2,13 @@ login = $@
 signup = $@
 
 cli:
-	@cd /app && @python3 cli7.py $(login) $(signup)
+	@cd app/ && @python3 cli7.py $(login) $(signup)
 
 serv: 
-	@cd /app && @python3 serv7.py 
+	@cd app/ && @python3 serv7.py 
 
 test:
-	@cd /test && python3 -m unittest discover -v
+	@cd test/ && python3 -m unittest discover -v
 
 %:
 	@echo "La regla '$@' no está definida en el Makefile."
